[package]
name = "xkcd-cli-rs"
version = "0.1.0"
authors = ["palazzini francesco <palazzini.francesco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
clap = "3.0.0-beta.1"
